finished basic comic body section

--- a/index.html
+++ b/index.html
@@ -29,10 +29,23 @@
 			<div id="blank_page">
 			</div>
 
-			<div id="comic_nav_middle">
+			<div id="comic_nav_bottom">
+				<a href="#first" id="first_button"></a>
+				<a href="#prev" id="prev_button"></a>
+				<a href="#next" id="next_button"></a>
+				<a href="#last" id="last_button"></a>
 			</div>
 
-			<div id="page_nav_middle">
+			<div id="credit_bottom">
+			</div>
+
+			<div id="page_nav_bottom">
+				<a href="#database" id="bottom_database"></a>
+				<a href="archive" id="bottom_archive"></a>
+			</div>
+
+			<div id="hiveworks_jumpbar">
+				<div id="hiveworks_jumpbar_placeholder"></div>
 			</div>
 		</div>
 
@@ -41,16 +54,13 @@
 	</div>
 
 	<div id="comment_bottom">
-		<div id="hiveworks_nav">
-		</div>
-
 		<div id="comic_entry">
 		</div>
 
 		<div id="disqus">
 		</div>
 
-		<div id="ad_right">
+		<div id="adplaceholder_right">
 		</div>
 	</div>
 
