finished non-hover assets

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
 
 	<div id="main">
 		<div id="main_comic_center">
+
 			<div id="chapter_nav_left">
+				<div id="chapter_num_top"></div>
+				<div id="chapter_text"></div>
 			</div>
 
 			<div id="blank_page">
