first pass static page finished

--- a/index.html
+++ b/index.html
@@ -56,14 +56,21 @@
 		</div>
 	</div>
 
-	<div id="comment_bottom">
-		<div id="comic_entry">
+	<div id="commentarea_bottom">
+		<div id="chapter_num_bottom">
+		</div>
+
+		<div id="blog_entry">
 		</div>
 
 		<div id="disqus">
 		</div>
 
-		<div id="adplaceholder_right">
+		<div id="placeholder_frame_right">
+			<div id="placeholder_right"></div>
+		</div>
+
+		<div id="uedc_logo">
 		</div>
 	</div>
 
