non-functioning, committing for ref

--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
 <body>
 	<div id="header">
 		<div id="top_page_nav">
+			<div id="header_wrapper">
 			<a href="index.html" id="top_logo"></a>
-			<a href="#database" id="top_database"></a>
+
+			<a href="index.html" id="top_database"></a>
+
 			<a href="#archive" id="top_archive"></a>
+		</div>
 		</div>
 
 		<div id="header_top_hive">
@@ -33,8 +37,8 @@
 			</div>
 
 			<div id="comic_nav_bottom">
-				<a href="#first" id="first_button"></a>
-				<a href="#prev" id="prev_button"></a>
+				<a href="index.html" id="first_button"></a>
+				<a href="index.html" id="prev_button"></a>
 				<a href="#next" id="next_button"></a>
 				<a href="#last" id="last_button"></a>
 			</div>
