--- a/index.html
+++ b/index.html
@@ -7,13 +7,28 @@
 	<title>Demon Kings</title>
 	<meta name="description" content="Demon Kings">
 	<link rel="stylesheet" href="mainstyle.css">
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js">
+	</script>
+	<script>
+	/* Swaps class on parent elements for hover effects */
+	$(document).ready(function() {
+		$('#top_database').hover(function(){
+		$(this).parent().toggleClass('top_database_hover')
+	});
+	})
+	
+	</script>
 </head>
 
 <body>
 	<div id="header">
 		<div id="top_page_nav">
 			<a href="index.html" id="top_logo"></a>
-			<a href="#database" id="top_database"></a>
+
+			<div class="top_database_base">
+				<a href="index.html" id="top_database"></a>
+			</div>
+
 			<a href="#archive" id="top_archive"></a>
 		</div>
 
@@ -50,12 +65,10 @@
 			<div id="hiveworks_jumpbar">
 				<div id="hiveworks_jumpbar_placeholder"></div>
 			</div>
-
-			<div id="main_charas_right">
-			</div>
 		</div>
 
-		
+		<div id="main_charas_right">
+		</div>
 	</div>
 
 	<div id="commentarea_bottom">
