--- a/index.html
+++ b/index.html
@@ -7,14 +7,40 @@
 	<title>Demon Kings</title>
 	<meta name="description" content="Demon Kings">
 	<link rel="stylesheet" href="mainstyle.css">
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+	<script>
+	/* Swaps class on parent elements for hover effects */
+	$(document).ready(function() {
+		$('.top_logo').hover(function(){
+			$('.top_logo').toggleClass('top_logo_hover');
+			$('.top_database_base').toggleClass('top_database_hover');
+			$('.top_archive_base').toggleClass('top_archive_hover');
+
+		});
+
+		$('.top_database_base').hover(function(){
+			$('.top_database_base').toggleClass('top_database_hover_2');
+	});
+
+		$('.top_archive_base').hover(function(){
+			$('.top_archive_base').toggleClass('top_archive_hover_2');
+	});
+	});
+	</script>
 </head>
 
 <body>
 	<div id="header">
 		<div id="top_page_nav">
-			<a href="index.html" id="top_logo"></a>
-			<a href="#database" id="top_database"></a>
-			<a href="#archive" id="top_archive"></a>
+			<div class="top_database_base">
+				<a href="#database" id="top_database"></a>
+			</div>
+
+			<a href="index.html" class="top_logo"></a>
+			
+			<div class="top_archive_base">
+				<a href="#archive" id="top_archive"></a>
+			</div>
 		</div>
 
 		<div id="header_top_hive">
