fixed issue #2, added vertical align

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 <body>
 	<div id="header">
 		<div id="top_page_nav">
-			<div class="top_database_base">
+			<div class="top_database_base">&nbsp;
 				<a href="#database" id="top_database"></a>
 			</div>
 
 			<a href="index.html" class="top_logo"></a>
 			
-			<div class="top_archive_base">
+			<div class="top_archive_base">&nbsp;
 				<a href="#archive" id="top_archive"></a>
 			</div>
 		</div>
