image preloader to prevent hover flicker, formatting, additional comments

--- a/index.html
+++ b/index.html
@@ -6,52 +6,72 @@
 	<meta charset="utf-8">
 	<title>Demon Kings</title>
 	<meta name="description" content="Demon Kings">
+
 	<link rel="stylesheet" href="mainstyle.css">
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-	<script>
-	/* Swaps class on parent elements for hover effects */
-	$(document).ready(function() {
-		$('.top_logo').hover(function(){
-			$('.top_logo').toggleClass('top_logo_hover');
-			$('.top_database_base').toggleClass('top_database_hover');
-			$('.top_archive_base').toggleClass('top_archive_hover');
 
-		});
-
-		$('.top_database_base').hover(function(){
-			$('.top_database_base').toggleClass('top_database_hover_2');
-	});
-
-		$('.top_archive_base').hover(function(){
-			$('.top_archive_base').toggleClass('top_archive_hover_2');
-	});
-	});
+	<script type="text/javascript">
+	/* Image Preloader to prevent hover flicker */
+		<!--//--><![CDATA[//><!--
+			var images = new Array()
+			function preload() {
+				for (i = 0; i < preload.arguments.length; i++) {
+					images[i] = new Image()
+					images[i].src = preload.arguments[i]
+				}
+			}
+			preload(
+				"images/demonkings_chaptertabs_on6.png",
+				"images/demonkings_chaptertabs_on5.png",
+				"images/demonkings_chaptertabs_on5.png",
+				"images/demonkings_chaptertabs_on3.png",
+				"images/demonkings_chaptertabs_on2.png",
+				"images/demonkings_chaptertabs_on1.png",
+				"images/demonkings_header_center_on.png",
+				"images/demonkings_header_left_on1.png",
+				"images/demonkings_header_left_on2.png",
+				"images/demonkings_header_right_on1.png",
+				"images/demonkings_header_right_on2.png",
+				"images/demonkings_database_bottom_on.png",
+				"images/demonkings_archive_bottom_on.png"
+			)
+		//--><!]]>
 	</script>
+	
 </head>
 
 <body>
 	<div id="header">
 		<div id="top_page_nav">
-			<div class="top_database_base">&nbsp;
+			<div class="top_database_base">
 				<a href="#database" id="top_database"></a>
 			</div>
 
 			<a href="index.html" class="top_logo"></a>
 			
-			<div class="top_archive_base">&nbsp;
+			<div class="top_archive_base">
 				<a href="#archive" id="top_archive"></a>
 			</div>
 		</div>
 
-		<div id="header_top_hive">
-		</div>
+		<div id="header_top_hive"></div>
 	</div>
 
 	<div id="main">
 		<div id="main_comic_center">
 
-			<div id="chapter_nav_left">
+			<div class="chapter_nav_left">
 				<div id="chapter_num_top"></div>
+
+				<div id="chapter_num_wrapper">
+					<a href="#ch006" id="ch006"></a>
+					<a href="#ch005" id="ch005"></a>
+					<a href="#ch004" id="ch004"></a>
+					<a href="#ch003" id="ch003"></a>
+					<a href="#ch002" id="ch002"></a>
+					<a href="#ch001" id="ch001"></a>
+				</div>
+
 				<div id="chapter_text"></div>
 			</div>
 
@@ -69,8 +89,13 @@
 			</div>
 
 			<div id="page_nav_bottom">
-				<a href="#database" id="bottom_database"></a>
-				<a href="archive" id="bottom_archive"></a>
+				<div class="bottom_database_base">
+					<a href="#database" id="bottom_database"></a>
+				</div>
+
+				<div class="bottom_archive_base">
+					<a href="archive" id="bottom_archive"></a>
+				</div>
 			</div>
 
 			<div id="hiveworks_jumpbar">
@@ -103,5 +128,58 @@
 	</div>
 
 </body>
+
+<script>
+	/* Swaps class on parent elements for hover effects */
+	$(document).ready(function() {
+		$('.top_logo').hover(function(){
+			$('.top_logo').toggleClass('top_logo_hover');
+			$('.top_database_base').toggleClass('top_database_hover');
+			$('.top_archive_base').toggleClass('top_archive_hover');
+
+		});
+
+		$('.top_database_base').hover(function(){
+			$('.top_database_base').toggleClass('top_database_hover_2');
+		});
+
+		$('.top_archive_base').hover(function(){
+			$('.top_archive_base').toggleClass('top_archive_hover_2');
+		});
+
+		$('#bottom_database').hover(function(){
+			$('.bottom_database_base').toggleClass('bottom_database_hover');
+		});
+
+		$('#bottom_archive').hover(function(){
+			$('.bottom_archive_base').toggleClass('bottom_archive_hover');
+		});
+
+		$('#ch006').hover(function(){
+			$('.chapter_nav_left').toggleClass('chapter_nav_hover6');
+		});
+
+		$('#ch005').hover(function(){
+			$('.chapter_nav_left').toggleClass('chapter_nav_hover5');
+		});
+
+		$('#ch004').hover(function(){
+			$('.chapter_nav_left').toggleClass('chapter_nav_hover4');
+		});
+
+		$('#ch003').hover(function(){
+			$('.chapter_nav_left').toggleClass('chapter_nav_hover3');
+		});
+
+		$('#ch002').hover(function(){
+			$('.chapter_nav_left').toggleClass('chapter_nav_hover2');
+		});
+
+		$('#ch001').hover(function(){
+			$('.chapter_nav_left').toggleClass('chapter_nav_hover1');
+		});
+
+	});
+	</script>
 
 </html>
